updated paths to use contextPath

--- a/src/documents/info/index.html.hbs
+++ b/src/documents/info/index.html.hbs
@@ -8,7 +8,7 @@ footer: true
 
   <section class="dorothyInfo">
     <div class="container">
-      <img class="dorothyInfo-pic" src="/assets/images/dorothy2.jpg" alt="" />
+      <img class="dorothyInfo-pic" src="{{site.contextPath}}/assets/images/dorothy2.jpg" alt="" />
       <section class="dorothyInfo-bio">
         <h1 class="dorothyInfo-headline">Some information about me.</h1>
         <p>My name is Dorothy Gale and I'm always trying to find my way home.</p>
