--- a/src/documents/work/cowardly-lion/index.html.hbs
+++ b/src/documents/work/cowardly-lion/index.html.hbs
@@ -17,13 +17,13 @@ bodyClass: 'work'
         </dl>
         <p class="projectDetail-desc">In the land of Oz, the Cowardly Lion journeyed to the Emerald City. He met with the Wizard and discovered his courage.</p>
         <p class="projectDetail-desc">
-          <a href="/work/" title="View more work.">View more work.</a>
+          <a href="{{site.contextPath}}/work/" title="View more work.">View more work.</a>
         </p>
       </div>
     </div>
-    <img class="projectPic" src="/assets/images/slide-cowardly-lion1.jpg" alt="The Cowardly Lion" />
-    <img class="projectPic" src="/assets/images/slide-cowardly-lion2.jpg" alt="The Cowardly Lion" />
-    <img class="projectPic" src="/assets/images/slide-cowardly-lion3.jpg" alt="The Cowardly Lion" />
-    <img class="projectPic" src="/assets/images/slide-cowardly-lion4.jpg" alt="The Cowardly Lion" />
+    <img class="projectPic" src="{{site.contextPath}}/assets/images/slide-cowardly-lion1.jpg" alt="The Cowardly Lion" />
+    <img class="projectPic" src="{{site.contextPath}}/assets/images/slide-cowardly-lion2.jpg" alt="The Cowardly Lion" />
+    <img class="projectPic" src="{{site.contextPath}}/assets/images/slide-cowardly-lion3.jpg" alt="The Cowardly Lion" />
+    <img class="projectPic" src="{{site.contextPath}}/assets/images/slide-cowardly-lion4.jpg" alt="The Cowardly Lion" />
     </ul>
   </section>
