--- a/src/partials/footer-site.html.hbs
+++ b/src/partials/footer-site.html.hbs
@@ -1,8 +1,8 @@
 <footer class="siteFooter container">
     <section class="footerAbout footerSection">
-      <img class="footerAbout-pic" src="/assets/images/cowardly-lion-small.jpg" alt="Cowardly Lion" />
+      <img class="footerAbout-pic" src="{{site.contextPath}}/assets/images/cowardly-lion-small.jpg" alt="Cowardly Lion" />
       <h3 class="footerHeadline">Featured: Cowardly Lion</h3>
-      <p>A cowardly companion who finally found his courage and reclaimed his throne as King of the Jungle. <a href="/work/cowardly-lion/" title="Learn more about the Lion">Learn more about the Lion.</a></p>
+      <p>A cowardly companion who finally found his courage and reclaimed his throne as King of the Jungle. <a href="{{site.contextPath}}/work/cowardly-lion/" title="Learn more about the Lion">Learn more about the Lion.</a></p>
     </section>
     <section class="footerSocial footerSection">
       <h3 class="footerHeadline">Social links</h3>
