fixed broken paths

--- a/src/documents/work/index.html.hbs
+++ b/src/documents/work/index.html.hbs
@@ -8,56 +8,56 @@ bodyClass: 'work'
   <section class="portfolio container">
     <ul class="projectList">
       <li class="projectItem">
-        <a href="{{site.contextPath}}/{{site.contextPath}}/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
+        <a href="{{site.contextPath}}/work/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
           <img class="projectItem-pic" src="{{site.contextPath}}/assets/images/thumb-cowardly-lion.jpg" alt="The Cowardly Lion" />
           <h4 class="projectItem-title">The Cowardly Lion</h4>
           <p class="projectItem-desc">design, illustration</p>
         </a>
       </li>
       <li class="projectItem">
-        <a href="{{site.contextPath}}/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
+        <a href="{{site.contextPath}}/work/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
           <img class="projectItem-pic" src="{{site.contextPath}}/assets/images/thumb-cowardly-lion.jpg" alt="The Cowardly Lion" />
           <h4 class="projectItem-title">The Cowardly Lion</h4>
           <p class="projectItem-desc">design, illustration</p>
         </a>
       </li>
       <li class="projectItem">
-        <a href="{{site.contextPath}}/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
+        <a href="{{site.contextPath}}/work/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
           <img class="projectItem-pic" src="{{site.contextPath}}/assets/images/thumb-cowardly-lion.jpg" alt="The Cowardly Lion" />
           <h4 class="projectItem-title">The Cowardly Lion</h4>
           <p class="projectItem-desc">design, illustration</p>
         </a>
       </li>
       <li class="projectItem">
-        <a href="{{site.contextPath}}/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
+        <a href="{{site.contextPath}}/work/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
           <img class="projectItem-pic" src="{{site.contextPath}}/assets/images/thumb-cowardly-lion.jpg" alt="The Cowardly Lion" />
           <h4 class="projectItem-title">The Cowardly Lion</h4>
           <p class="projectItem-desc">design, illustration</p>
         </a>
       </li>
       <li class="projectItem">
-        <a href="{{site.contextPath}}/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
+        <a href="{{site.contextPath}}/work/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
           <img class="projectItem-pic" src="{{site.contextPath}}/assets/images/thumb-cowardly-lion.jpg" alt="The Cowardly Lion" />
           <h4 class="projectItem-title">The Cowardly Lion</h4>
           <p class="projectItem-desc">design, illustration</p>
         </a>
       </li>
       <li class="projectItem">
-        <a href="{{site.contextPath}}/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
+        <a href="{{site.contextPath}}/work/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
           <img class="projectItem-pic" src="{{site.contextPath}}/assets/images/thumb-cowardly-lion.jpg" alt="The Cowardly Lion" />
           <h4 class="projectItem-title">The Cowardly Lion</h4>
           <p class="projectItem-desc">design, illustration</p>
         </a>
       </li>
       <li class="projectItem">
-        <a href="{{site.contextPath}}/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
+        <a href="{{site.contextPath}}/work/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
           <img class="projectItem-pic" src="{{site.contextPath}}/assets/images/thumb-cowardly-lion.jpg" alt="The Cowardly Lion" />
           <h4 class="projectItem-title">The Cowardly Lion</h4>
           <p class="projectItem-desc">design, illustration</p>
         </a>
       </li>
       <li class="projectItem">
-        <a href="{{site.contextPath}}/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
+        <a href="{{site.contextPath}}/work/cowardly-lion/" title="The Cowardly Lion" class="projectItem-link">
           <img class="projectItem-pic" src="{{site.contextPath}}/assets/images/thumb-cowardly-lion.jpg" alt="The Cowardly Lion" />
           <h4 class="projectItem-title">The Cowardly Lion</h4>
           <p class="projectItem-desc">design, illustration</p>
